OwnYourDrive-Dev/force-app/main/default/objects/Customer_Verification__c/Customer_Verification__c.object-meta.xml
<CustomObject>
    <description>This is for the verifying the customer details with the Documents</description>
    <label>Customer Verification</label>
    <nameField>
        <displayFormat>CV-{00000}</displayFormat>
        <label>Customer Verification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Verification</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>