OwnYourDrive-Dev/force-app/main/default/objects/Customer_Verification__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Verification</relationshipLabel>
    <relationshipName>Customer_Verification</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>