OwnYourDrive-Dev/force-app/main/default/objects/Customer_Verification__c/fields/Is_Documents_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Documents_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines whether the customer documents are verified or not</description>
    <label>Is Documents Verified</label>
    <type>Checkbox</type>
</CustomField>