OwnYourDrive-Dev/force-app/main/default/objects/Customer_Verification__c/fields/Required_Related_Documents__c.field-meta.xml
<CustomField>
    <fullName>Required_Related_Documents__c</fullName>
    <label>Required Related Documents</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aadhar Card</fullName>
            </value>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>PAN Card</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Voter Id</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>